--- a/index.html
+++ b/index.html
@@ -3,36 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сайт</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Веб-разработчик Андреев Евгений</title>
 </head>
 <body>
     <header class="header">
         <div class="header-top">
-            <span class="logo">Андреев Евгений</span>
+            <a href="/" class="logo">Андреев Евгений</a>
             <nav class="navigation">
                 <ul class="menu">
-                    <li class="menu-elenent">
+                    <li class="menu-element">
                         <a href="menu-element__link">Home</a>
                     </li>
-                    <li class="menu-elenent">
+                    <li class="menu-element">
                         <a href="menu-element__link">About</a>
                     </li>
-                    <li class="menu-elenent">
+                    <li class="menu-element">
                         <a href="menu-element__link">Achievements</a>
                     </li>
-                    <li class="menu-elenent">
+                    <li class="menu-element">
                         <a href="menu-element__link">Skills</a>
                     </li>
-                    <li class="menu-elenent">
+                    <li class="menu-element">
                         <a href="menu-element__link">Work</a>
                     </li>
-                    <li class="menu-elenent">
+                    <li class="menu-element">
                         <a href="menu-element__link">Interests</a>
                     </li>
-                    <li class="menu-elenent">
+                    <li class="menu-element">
                         <a href="menu-element__link">Books</a>
                     </li>
-                    <li class="menu-elenent">
+                    <li class="menu-element">
                         <a href="menu-element__link">Contact me</a>
                     </li>
                 </ul>
@@ -42,8 +44,10 @@
         </div>
 
         <div class="header-center">
-            <h1 class="name">Андреев Евгений</h1>
-            <p class="description">Привет. Меня зовут Евгений, и я веб-разработчик</p>
+            <div class="header-center__wrapper">
+                <h1 class="name">Андреев Евгений</h1>
+                <p class="description">Привет. Меня зовут Евгений, и я веб-разработчик</p>
+            </div>
         </div>
     </header>
 
