--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <header class="header">
+        <div class="header__background">
+            
+        </div>
+
         <div class="header-top">
             <a href="/" class="logo">Андреев Евгений</a>
             <nav class="navigation">
@@ -104,7 +108,7 @@
 
             <div class="skills-card right">
                 <div class="skill-card__title">
-                    <img src="" alt="C#" class="skill-card__image">
+                    <img src="C.png" alt="C#" class="skill-card__image">
                     <span class="skill-card__name">C#</span>
                 </div>
 
